# fastapi-rabbitmq-back

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
gateway/: config.py  db.py  main.py  processing.py  rabbit.py  routes.py  schemas.py
