[tool.poetry]
name = "fastapi-rabbitmq-back"
version = "0.1.0"
description = ""
authors = ["Alexei Shigaev <9212010568@inbox.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
python-multipart = "^0.0.6"
aio-pika = "^9.3.1"
pydantic = "^2.5.2"
sqlalchemy = "^2.0.23"
aiosqlite = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
